# pcd8544-hal

./: Cargo.toml  create_logo.sh
platform-examples/stm32f103-pcd8544/: Cargo.toml
platform-examples/stm32f103-pcd8544/.cargo/: config
platform-examples/stm32f103-pcd8544/examples/: spi.rs
platform-examples/stm32f30x-pcd8544/examples/: spi.rs
platform-examples/tm4c123x-pcd8544/: .gdbinit
platform-examples/tm4c123x-pcd8544/examples/: gpio.rs
src/: demo.rs  lib.rs  pcd8544_gpio.rs  pcd8544_spi.rs
